# cis6930sp25-sampleproj

./: Pipfile  README.md  main.py  pyproject.toml
.github/workflows/: pytest.yml
docs/: README.md
resources/: README.md
tests/: test_ducking.py  test_sanity.py
