[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Your name", email = "your.name@ufl.edu"}]
name = "assignment1"
description = "Assignment One from <github id> -- Spring 2025"
version = "1.0"
readme = "README.md"

[project.urls]
Task = "https://ufdatastudio.com/cis6930sp25/assignments/1"
repository = "https://github.com/cegme/cis6930sp25-sampleproj"

[tool.pytest.ini_options]
testpaths = ["tests"]
